--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,14 @@ dependencies = [
     "jsonlines",
     "tqdm",
     "numpy",
-    "pandas"
+    "pandas",
+    "requests>=2.32.3",
+    "httpx>=0.28.1",
+    "aiohttp>=3.12.7",
+    "biopython>=1.85",
+    "mygene>=3.2.2",
+    "reactome2py>=3.0.0",
+    "tenacity>=9.1.2",
 ]
 
 [build-system]
@@ -30,3 +37,9 @@ target-version = "py39"
 
 [tool.ruff.lint]
 select = ["E", "F", "B", "I"] 
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.0",
+    "ruff>=0.11.12",
+]
